# clash-riscv

./: cabal.project  clash-riscv.cabal  hie.yaml  stack.yaml
src/Cache/: ICache.hs  PseudoLRUTree.hs  Replacement.hs
src/Core/: Debug.hs  Decode.hs  Pipeline.hs  RegFile.hs
test/: doctests.hs
