cabal-version:       2.4
name:                clash-riscv
version:             0.1.0.0
license:             BSD-3-Clause
author:              Adam Walker
maintainer:          adamwalker10@gmail.com

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    InstanceSigs
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NoStarIsType
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Packages to support clash
    -package ghc-typelits-extra
    -package ghc-typelits-natnormalise
    -package ghc-typelits-knownnat

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables these optimizations. Note that the fields will
    -- remain strict.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base,
    Cabal,
    text,
    deepseq,
    singletons-base,
    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.8.1 && < 1.10,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat


library
  import: common-options
  hs-source-dirs: src
  exposed-modules: Core.Pipeline, Core.Debug, Core.Mem, Core.RegFile, Core.Compare, Core.ALU, Core.Decode, Cache.ICache, Cache.Replacement, Cache.PseudoLRUTree
  other-extensions: DataKinds, NoImplicitPrelude, TypeOperators, DeriveGeneric, DeriveAnyClass, RecordWildCards, OverloadedStrings, BinaryLiterals, ScopedTypeVariables, TemplateHaskell
  default-language: Haskell2010

-- Builds the executable 'clash', with clash-riscv project in scope
executable clash
  main-is: bin/Clash.hs
  default-language: Haskell2010
  Build-Depends: base, clash-ghc, clash-riscv
  if !os(Windows)
    ghc-options: -dynamic

-- Builds the executable 'clashi', with clash-riscv project in scope
executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  if !os(Windows)
    ghc-options: -dynamic
  build-depends: base, clash-ghc, clash-riscv

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          doctests.hs
  ghc-options:      -Wall -Wcompat -threaded
  hs-source-dirs:   test
  build-depends:
    base,
    clash-riscv,
    doctest-parallel >= 0.2 && < 0.4,

test-suite test-library
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: TestSuite.hs
  other-modules:
    CacheTest, Program, TestUtils
  build-depends:
    QuickCheck,
    clash-prelude-hedgehog,
    hedgehog,
    hspec,
    tasty >= 1.2 && < 1.5,
    tasty-hedgehog,
    tasty-th,
    riscv-isa,
    clash-riscv